Changed the index pages to use scrollable windows for the main content (and small layout fixes)

--- a/Admin/Pages/Certificates/Descriptions/Index.cshtml
+++ b/Admin/Pages/Certificates/Descriptions/Index.cshtml
@@ -1,52 +1,80 @@
 ﻿@page
 @model Admin.Pages.Certificates.Descriptions.IndexModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Certificate Descriptions";
 }
 
-<h2>Certificate Descriptions</h2>
+<h1>Certificate Descriptions</h1>
 
-<p>
-    <a class="btn btn-dark" asp-page="Create">Create New</a>
-    <a class="btn btn-dark pull-right" asp-page="../Index">Certificates</a>
+<p class="space-btns">
+    <a class="btn btn-dark" asp-page="Create">Create New</a>    
+    <a class="btn btn-info pull-right" href="/Certificates/Descriptions">Certificate Descriptions</a>
+    <a class="btn btn-secondary pull-right" href="/Certificates">Certificates</a>
 </p>
+
+@{
+    string? filterValue = Model.Filter;
+    if (filterValue != null)
+    {
+        filterValue = filterValue.Trim();
+    }
+
+    var itemsThatMatchFilter = Model.Descriptions.Where(e => ((Model.Filter == null
+        || e.DescEng.ToLower().Contains(Model.Filter.ToLower())
+        || e.DescFre.ToLower().Contains(Model.Filter.ToLower()))
+        && ((e.DescFre != "" && e.DescEng != "")
+        && (e.Active == 1))));
+
+    itemsThatMatchFilter = itemsThatMatchFilter.OrderBy(x => x.DescEng.ToLower()).ToList();
+}
+
 <form>
     <div class="form-actions no-color">
         <h6>
-            Find certificate descriptions:
-            <input type="text" asp-for="@Model.Filter" />
-            <input type="submit" value="Search" class="btn btn-primary" /> |
-            <a asp-page="./Index">Back to Full List</a>
+            <label for="Filter">Find certificate descriptions:</label>
+            <input type="text" asp-for="@Model.Filter" value="@filterValue" />
+            <input type="submit" value="Search" class="btn btn-primary" /> 
+            @if (!String.IsNullOrWhiteSpace(Model.Filter))
+            {
+                <span><span class="vertical-bar">|</span> <a asp-page="./Index">Back to Full List</a></span>
+            }
         </h6>
     </div>
 </form>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Certificate Description English</th>
-            <th>Certificate Description French</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Descriptions.Where(e => Model.Filter == null || e.DescEng.ToLower().Contains(@Model.Filter.ToLower()) || e.DescFre.ToLower().Contains(@Model.Filter.ToLower())))
-        {
-            if (item.Active != 0) {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DescEng)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DescFre)
-                </td>
-                <td style="width:15%">
-                    <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
-            }
-        }
-    </tbody>
-</table>
 
+@if (itemsThatMatchFilter.Count() > 0)
+{
+    <div id="table-container">
+          <table class="table">
+                <thead>
+                    <tr class="table-header-row text-center">
+                        <th><b>Certificate Description English</b></th>
+                        <th><b>Certificate Description French</b></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in itemsThatMatchFilter)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.DescEng)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.DescFre)
+                            </td>
+                            <td style="width:15%">
+                                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+          </table>
+    </div>
+}
+else
+{
+    <h4 class="no-results">No certificate descriptions match the filter "@Model.Filter"</h4>
+}
