--- a/Admin/Pages/Positions/Index.cshtml
+++ b/Admin/Pages/Positions/Index.cshtml
@@ -8,35 +8,54 @@
 <p>
     <a class="btn btn-dark" asp-page="Create">Create New</a>
 </p>
+
+@{
+    string? filterValue = Model.Filter;
+    if (filterValue != null)
+    {
+        filterValue = filterValue.Trim();
+    }
+
+    var itemsThatMatchFilter = Model.JobPositions.Where(e => (Model.Filter == null
+        || e.JobTitleEng.ToLower().Contains(Model.Filter.ToLower())
+        || e.JobTitleFre.ToLower().Contains(Model.Filter.ToLower())
+        || e.LevelCode.ToLower().Contains(Model.Filter.ToLower()))
+        && (e.Active == 1));
+
+    itemsThatMatchFilter = itemsThatMatchFilter.OrderBy(x => x.JobTitleEng.ToLower()).OrderBy(x => x.LevelCode.ToLower()).ToList();
+}
+
 <form>
     <div class="form-actions no-color">
         <h6>
-            Find similar positions:
-            <input type="text" asp-for="@Model.Filter" />
-            <input type="submit" value="Search" class="btn btn-primary" /> |
-            <a asp-page="./Index">Back to Full List</a>
+            <label for="Filter">Find positions:</label>
+            <input type="text" asp-for="@Model.Filter" value="@filterValue" />
+            <input type="submit" value="Search" class="btn btn-primary" /> 
+            @if (!String.IsNullOrWhiteSpace(Model.Filter))
+            {
+                <span><span class="vertical-bar">|</span> <a asp-page="./Index">Back to Full List</a></span>
+            }
         </h6>
     </div>
 </form>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th width="7%"><b>Level</b></th>
-            <th width="35%"><b>Title English</b></th>
-            <th width="35%"><b>Title French</b></th>
-            <th width="15%"></th>
-        </tr>
-    </thead>
-    <tbody>
-        @if (Model.JobPositions.Any(e => Model.Filter == null || e.JobTitleEng.ToLower().Contains(@Model.Filter.ToLower()) || e.JobTitleFre.ToLower().Contains(@Model.Filter.ToLower()) || e.LevelCode.ToLower().Contains(@Model.Filter.ToLower())))
-        {
-            @foreach (var item in Model.JobPositions.Where(e => Model.Filter == null || e.JobTitleEng.ToLower().Contains(@Model.Filter.ToLower()) || e.JobTitleFre.ToLower().Contains(@Model.Filter.ToLower())))
-            {
-                if (item.Active != 0)
+@if (itemsThatMatchFilter.Count() > 0)
+{
+    <div id="table-container">
+        <table class="table">
+            <thead>
+                <tr class="table-header-row text-center">
+                    <th width="7%"><b>Level</b></th>
+                    <th width="35%"><b>Title English</b></th>
+                    <th width="35%"><b>Title French</b></th>
+                    <th width="15%"></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in itemsThatMatchFilter)
                 {
                     <tr>
-                        <td>
+                        <td class="text-center">
                             @Html.DisplayFor(modelItem => item.LevelCode)
                         </td>
                         <td>
@@ -52,7 +71,11 @@
                         </td>
                     </tr>
                 }
-            }
-        }
-    </tbody>
-</table>
+            </tbody>
+        </table>
+    </div>
+}
+else
+{
+    <h4 class="no-results">No positions match the filter "@Model.Filter"</h4>
+}
