--- a/Admin/Pages/Competencies/List.cshtml
+++ b/Admin/Pages/Competencies/List.cshtml
@@ -27,30 +27,32 @@
     itemsThatMatchFilter = itemsThatMatchFilter.OrderBy(x => x.NameEng.ToLower()).ToList();
 }
 
-<h1>@Model.Type.NameEng / @Model.Type.NameFre</h1>
+<div class="collapse @(Model.DisplayTopOfPage ? "show" : "")" id="collapsibleTop" aria-expanded="@(Model.DisplayTopOfPage ? "true" : "false")">
+    <h1>@Model.Type.NameEng / @Model.Type.NameFre</h1>
 
-<p class="space-btns">
-    <a class="btn btn-dark" asp-page="/Competencies/Create" asp-route-typeid="@Model.Type.Id">Create New</a>
-    <a href="@("/Competencies/List?typeid=4&filter=" + filterValue)" class="btn pull-right @(typeid == "4" ? classSelectedComp : classUnselectedComp)">Executive</a>
-    <a href="@("/Competencies/List?typeid=3&filter=" + filterValue)" class="btn pull-right @(typeid == "3" ? classSelectedComp : classUnselectedComp)">Behavioural</a>
-    <a href="@("/Competencies/List?typeid=2&filter=" + filterValue)" class="btn pull-right @(typeid == "2" ? classSelectedComp : classUnselectedComp)">Technical</a>
-    <a href="@("/Competencies/List?typeid=1&filter=" + filterValue)" class="btn pull-right @(typeid == "1" ? classSelectedComp : classUnselectedComp)">Knowledge</a>
-</p>
-<form method="post">
-    <div class="form-actions no-color">
-        <h6>
-            <label for="Filter">Find competencies:</label>
-            <input type="text" asp-for="@Model.Filter"/>
-            <input type="submit" value="Search" class="btn btn-primary" asp-all-route-data="@filterdata" /> 
-            @if (!String.IsNullOrWhiteSpace(Model.Filter))
-            {
-                <span><span class="vertical-bar">|</span> <a href="/Competencies/List?typeid=@typeid">Back to Full List</a></span>
-            }
-        </h6>
-    </div>
-</form>
+    <p class="space-btns">
+        <a class="btn btn-dark" asp-page="/Competencies/Create" asp-route-typeid="@Model.Type.Id">Create New</a>
+        <a href="@("/Competencies/List?typeid=4&filter=" + filterValue)" class="btn pull-right @(typeid == "4" ? classSelectedComp : classUnselectedComp)">Executive</a>
+        <a href="@("/Competencies/List?typeid=3&filter=" + filterValue)" class="btn pull-right @(typeid == "3" ? classSelectedComp : classUnselectedComp)">Behavioural</a>
+        <a href="@("/Competencies/List?typeid=2&filter=" + filterValue)" class="btn pull-right @(typeid == "2" ? classSelectedComp : classUnselectedComp)">Technical</a>
+        <a href="@("/Competencies/List?typeid=1&filter=" + filterValue)" class="btn pull-right @(typeid == "1" ? classSelectedComp : classUnselectedComp)">Knowledge</a>
+    </p>
+    <form method="post">
+        <div class="form-actions no-color">
+            <h6>
+                <label for="Filter">Find competencies:</label>
+                <input type="text" asp-for="@Model.Filter"/>
+                <input type="submit" value="Search" class="btn btn-primary" asp-all-route-data="@filterdata" /> 
+                @if (!String.IsNullOrWhiteSpace(Model.Filter))
+                {
+                    <span><span class="vertical-bar">|</span> <a href="/Competencies/List?typeid=@typeid">Back to Full List</a></span>
+                }
+            </h6>
+        </div>
+    </form>
+</div>
 
-@if (itemsThatMatchFilter.Count() > 0)
+@if (itemsThatMatchFilter.Any())
 {
     <div id="table-container">
         <table class="table">
@@ -60,7 +62,13 @@
                     <th class="col-2"><b>Competency French</b></th>
                     <th class="col-3"><b>Description English</b></th>
                     <th class="col-4"><b>Description French</b></th>
-                    <th class="col-1"></th>
+                    <th class="col-1">
+                        <img src="@(Model.DisplayTopOfPage ? "/images/icons/up_arrow.png" : "/images/icons/down_arrow.png")" 
+                        class="arrow-icon" data-toggle="collapse" data-target="#collapsibleTop" 
+                        aria-expanded="@(Model.DisplayTopOfPage ? "true" : "false")" aria-controls="collapsibleTop" 
+                        alt="@(Model.DisplayTopOfPage ? "Collapse" : "Expand") the top of the page"
+                        title="@(Model.DisplayTopOfPage ? "Collapse" : "Expand") the top of the page" />
+                    </th>
                 </tr>
             </thead>
             <tbody>
@@ -92,5 +100,12 @@
 }
 else
 {
-    <h4 class="no-results">No @Model.Type.NameEng.ToLower() match the filter "@Model.Filter"</h4>
+    if (!string.IsNullOrWhiteSpace(Model.Filter))
+    {
+        <h4 class="no-results">No @Model.Type.NameEng.ToLower() match the filter "@Model.Filter"</h4>
+    }
+    else
+    {
+        <h4 class="no-results">There are currently no @Model.Type.NameEng.ToLower()</h4>
+    }
 }
