--- a/Admin/Pages/Similar/Index.cshtml
+++ b/Admin/Pages/Similar/Index.cshtml
@@ -1,51 +1,54 @@
 ﻿@page
 @model Admin.Pages.Similar.IndexModel
+@using Business.Dtos.JobPositions
 @{
     ViewData["Title"] = "Similar Positions";
 }
 
-<h1>Similar Positions</h1>
+<div class="collapse @(Model.DisplayTopOfPage ? "show" : "")" id="collapsibleTop" aria-expanded="@(Model.DisplayTopOfPage ? "true" : "false")">
+    <h1>Similar Positions</h1>
 
-@{
-    string? filterValue = Model.Filter;
-    if (filterValue != null)
-    {
-        filterValue = filterValue.Trim();
+    @{
+        string? filterValue = Model.Filter;
+        if (filterValue != null)
+        {
+            filterValue = filterValue.Trim();
+        }
+
+        var itemsThatMatchFilter = Model.JobPositions.Where(e => (Model.Filter == null
+            || e.JobTitleEng.ToLower().Contains(Model.Filter.ToLower())
+            || e.JobTitleFre.ToLower().Contains(Model.Filter.ToLower())
+            || e.LevelCode.ToLower().Contains(Model.Filter.ToLower()))
+            && (e.Active == 1));
+
+        itemsThatMatchFilter = itemsThatMatchFilter.OrderBy(x => x.JobTitleEng.ToLower()).OrderBy(x => x.LevelCode.ToLower()).ToList();
+        var itemsList = itemsThatMatchFilter.ToList();
     }
 
-    var itemsThatMatchFilter = Model.JobPositions.Where(e => (Model.Filter == null
-        || e.JobTitleEng.ToLower().Contains(Model.Filter.ToLower())
-        || e.JobTitleFre.ToLower().Contains(Model.Filter.ToLower())
-        || e.LevelCode.ToLower().Contains(Model.Filter.ToLower()))
-        && (e.Active == 1));
+    <form>
+        <div class="form-actions no-color">
+            <h6>
+                <label for="Filter">Find positions:</label>
+                <input type="text" asp-for="@Model.Filter" />
+                <input type="submit" value="Search" class="btn btn-primary" /> 
+                @if (!String.IsNullOrWhiteSpace(Model.Filter))
+                {
+                    <span><span class="vertical-bar">|</span> <a href="/Similar">Back to Full List</a></span>
+                }
+                @if (Model.DisplayNumberOfJobsForEachMatchingPercentage)
+                {
+                    <a class="pull-right" href="/Similar?numMatching=false&filter=@filterValue">Hide Number of Matching Positions Per Percentage</a>
+                }
+                else
+                {
+                    <a class="pull-right" href="/Similar?numMatching=true&filter=@filterValue">View Number of Matching Positions Per Percentage</a>
+                }
+            </h6>
+        </div>
+    </form>
+</div>
 
-    itemsThatMatchFilter = itemsThatMatchFilter.OrderBy(x => x.JobTitleEng.ToLower()).OrderBy(x => x.LevelCode.ToLower()).ToList();
-}
-
-<form>
-    <div class="form-actions no-color">
-        <h6>
-            <label for="Filter">Find positions:</label>
-            <input type="text" asp-for="@Model.Filter" />
-            <input type="submit" value="Search" class="btn btn-primary" /> 
-            @if (!String.IsNullOrWhiteSpace(Model.Filter))
-            {
-                <span><span class="vertical-bar">|</span> <a href="/Similar@(Model.DisplayNumberOfJobsForEachMatchingPercentage ? "?numMatching=true" : "")">
-                    Back to Full List</a></span>
-            }
-            @if (Model.DisplayNumberOfJobsForEachMatchingPercentage)
-            {
-                <a class="pull-right" href="/Similar?filter=@filterValue">Hide Number of Matching Positions Per Percentage</a>
-            }
-            else
-            {
-                <a class="pull-right" href="/Similar?numMatching=true&filter=@filterValue">View Number of Matching Positions Per Percentage</a>
-            }
-        </h6>
-    </div>
-</form>
-
-@if (itemsThatMatchFilter.Count() > 0)
+@if (itemsThatMatchFilter.Any())
 {
     <div id="table-container">
         <table class="table">
@@ -58,19 +61,49 @@
                         <th class="col-3"><b>Title French</b></th>
                         <th class="col-3"><div class="four-col-grid"><span>100%</span><span>90%</span>
                             <span>80%</span><span>70%</span></div></th>
-                        <th class="col-2"></th>
+                        <th class="col-2">
+                            <img src="@(Model.DisplayTopOfPage ? "/images/icons/up_arrow.png" : "/images/icons/down_arrow.png")" 
+                            class="arrow-icon" data-toggle="collapse" data-target="#collapsibleTop" 
+                            aria-expanded="@(Model.DisplayTopOfPage ? "true" : "false")" aria-controls="collapsibleTop" 
+                            alt="@(Model.DisplayTopOfPage ? "Collapse" : "Expand") the top of the page" />
+                        </th>
                     }
                     else
                     {
                         <th class="col-1"><b>Level</b></th>
                         <th class="col-4"><b>Title English</b></th>
                         <th class="col-5"><b>Title French</b></th>
-                        <th class="col-2"></th>
+                        <th class="col-2">
+                            <img src="@(Model.DisplayTopOfPage ? "/images/icons/up_arrow.png" : "/images/icons/down_arrow.png")" 
+                            class="arrow-icon" data-toggle="collapse" data-target="#collapsibleTop" 
+                            aria-expanded="@(Model.DisplayTopOfPage ? "true" : "false")" aria-controls="collapsibleTop" 
+                            alt="@(Model.DisplayTopOfPage ? "Collapse" : "Expand") the top of the page"
+                            title="@(Model.DisplayTopOfPage ? "Collapse" : "Expand") the top of the page" />
+                        </th>
                     }
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in itemsThatMatchFilter)
+                @{
+                    var positionsWithoutSimilarOnes = new List<JobPositionDto>();
+                    foreach (var item in itemsList)
+                    {
+                        if (!Model.SimilarSearchIds.Contains(item.JobTitleId))
+                        {
+                            positionsWithoutSimilarOnes.Add(item);
+                        }
+                    }
+                    foreach (var pos in positionsWithoutSimilarOnes)
+                    {
+                        itemsList.Remove(pos);
+                    }
+                    positionsWithoutSimilarOnes.Reverse();
+                    foreach (var pos in positionsWithoutSimilarOnes)
+                    {
+                        itemsList.Insert(0, pos);
+                    }
+                }
+                @foreach (var item in itemsList)
                 {
                     <tr>
                         <td class="text-center">
@@ -115,6 +148,13 @@
 }
 else
 {
-    <h4 class="no-results">No positions match the filter "@Model.Filter"</h4>
+    if (!string.IsNullOrWhiteSpace(Model.Filter))
+    {
+        <h4 class="no-results">No positions match the filter "@Model.Filter"</h4>
+    }
+    else
+    {
+        <h4 class="no-results">There are currently no positions</h4>
+    }
 }
 
