--- a/Admin/Pages/Index.cshtml
+++ b/Admin/Pages/Index.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Home Page";
 }
 
-
 <div class="container">
     <div class="row align-items-center">
         <div class="col-sm py-3">
-            <div class="card" style="width: 20rem;">
+            <div class="card home-page-card">
                 <div class="card-body">
                     <h5 class="card-title">Certificates</h5>
                     <p class="card-text">Click here to create, view or edit certificates or certificate descriptions.</p>
@@ -17,16 +16,16 @@
             </div>
         </div>
         <div class="col-sm py-3">
-            <div class="card" style="width: 20rem;">
+            <div class="card home-page-card">
                 <div class="card-body">
                     <h5 class="card-title">Competencies</h5>
                     <p class="card-text">Click here to create, view or edit competencies and competency level definitions.</p>
-                    <a href="./Competencies" class="btn btn-primary">View</a>
+                    <a href="./Competencies/List" class="btn btn-primary">View</a>
                 </div>
             </div>
         </div>
         <div class="col-sm py-3">
-            <div class="card" style="width: 20rem;">
+            <div class="card home-page-card">
                 <div class="card-body">
                     <h5 class="card-title">Positions</h5>
                     <p class="card-text">Click here to create, view or edit job positions within the CCG.</p>
@@ -35,7 +34,7 @@
             </div>
         </div>
         <div class="col-sm py-3">
-            <div class="card" style="width: 20rem;">
+            <div class="card home-page-card">
                 <div class="card-body">
                     <h5 class="card-title">Similar Positions</h5>
                     <p class="card-text">Click here to create, view or edit similar positions by selecting and editing similar positions for each of the matching scores: 100%, 90%, 80% and 70%.</p>
